# wgpu-bc6h-compression

./: .gitignore  Cargo.toml  README.md  compile_shaders.sh
.github/workflows/: rust.yml
examples/: compress_dds.rs  compress_ktx2_cubemap.rs  compressed.dds  test.rs
shaders/: 2d.comp.hlsl  3d.comp.hlsl  shader.comp.hlsl
shaders/compiled/: 2d.comp.spv  2d_push_constants.comp.spv  3d.comp.spv  3d_push_constants.comp.spv
src/: lib.rs
